--- a/Admin_panel/Views/Shared/_Layout2.cshtml
+++ b/Admin_panel/Views/Shared/_Layout2.cshtml
@@ -61,7 +61,7 @@
         </div> *@
         <div class="container px-0">
             <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                <a href="index.cshtml" class="navbar-brand"><img src="~/img/logoformart.png" /></a>
+                <a asp-action="Index" asp-controller="Web" class="navbar-brand"><img src="~/img/logoformart.png" /></a>
                 <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars text-primary"></span>
                 </button>
@@ -82,8 +82,8 @@
                                 }
                             </div>
                         </div>
-                        <a href="shop-detail.cshtml" class="nav-item nav-link">Shop Detail</a>
-                        <div class="nav-item dropdown">
+                    @*     <a href="shop-detail.cshtml" class="nav-item nav-link">Shop Detail</a> *@
+                      @*   <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0 bg-secondary rounded-0">
                                 <a href="cart.cshtml" class="dropdown-item">Cart</a>
@@ -91,7 +91,7 @@
                                 <a href="testimonial.cshtml" class="dropdown-item">Testimonial</a>
                                 <a href="404.cshtml" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> *@
                         <a href="contact.cshtml" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex m-3 me-0">
