--- a/Admin_panel/Views/Shared/_Layout.cshtml
+++ b/Admin_panel/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@
                         <a class="collapse-item" asp-action="CategoryList">Category</a>
                         <a class="collapse-item" asp-action="SuperMarketList">Super Markets</a>
                         <a class="collapse-item" asp-action="ProdList">Products</a>
-                    <a class="collapse-item" href="blank.html">Blank Page</a>
+                        <a class="collapse-item" asp-action="OrderList">Orders</a>
                 </div>
             </div>
         </li>
