--- a/Admin_panel/Views/Web/contact.cshtml
+++ b/Admin_panel/Views/Web/contact.cshtml
@@ -16,7 +16,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fruitables - Vegetable Website Template</title>
+    <title>  <title>Your Choice Mart - @ViewData["Title"]</title></title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -40,6 +40,11 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <style>
+        #home:active {
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
