--- a/Admin_panel/Views/PlaceOrder/OrderConfirmation.cshtml
+++ b/Admin_panel/Views/PlaceOrder/OrderConfirmation.cshtml
@@ -1,10 +1,13 @@
 ﻿@model int
+@{
+    ViewData["Title"] = "Order Confirmation";
+}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title>Fruitables - Vegetable Website Template</title>
+    <title>Your Choice Mart - @ViewData["Title"]</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
