--- a/Admin_panel/Views/Web/Index.cshtml
+++ b/Admin_panel/Views/Web/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     Layout = "_Layout2";
+    ViewData["Title"]="Home";
 }
 
 <!DOCTYPE html>
@@ -7,7 +8,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fruitables - Vegetable Website Template</title>
+    <title>Your Choice Mart - @ViewData["Title"]</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -31,6 +32,11 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
+    <style>
+        #home:active {
+            color: green;
+        }
+    </style>
 </head>
 
 <body>
@@ -111,8 +117,8 @@
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-md-12 col-lg-7">
-                    <h4 class="mb-3 text-secondary">100% Organic Foods</h4>
-                    <h1 class="mb-5 display-3 text-primary">Organic Veggies & Fruits Foods</h1>
+                 @*    <h4 class="mb-3 text-secondary">100% Organic Foods</h4>  *@
+                    <h1 class="mb-5 display-5 text-primary">Search According To Your Choice</h1>
                     <div class="position-relative mx-auto">
                         <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Search">
                         <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Submit Now</button>
