--- a/Admin_panel/Views/Shared/_Layout2.cshtml
+++ b/Admin_panel/Views/Shared/_Layout2.cshtml
@@ -96,7 +96,7 @@
                         <a asp-action="Contact" asp-controller="Web" class="nav-item nav-link" id="home">Contact</a>
                     </div>
                     <div class="d-flex m-3 me-0">
-                        <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
+                       @*  <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button> *@
                         @if(claims!=null){
 
 
@@ -172,40 +172,39 @@
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Why People Like us!</h4>
                         <p class="mb-4">
-                            typesetting, remaining essentially unchanged. It was
-                            popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.
+                           We have wide range of best quality products from different super markets located in Karachi city.
                         </p>
-                        <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
+                     @*    <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a> *@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
-                        <h4 class="text-light mb-3">Shop Info</h4>
-                        <a class="btn-link" href="">About Us</a>
+                        <h4 class="text-light mb-3">Shop</h4>
+                    @*     <a class="btn-link" href="">About Us</a> *@
                         <a class="btn-link" href="">Contact Us</a>
-                        <a class="btn-link" href="">Privacy Policy</a>
+                      @*   <a class="btn-link" href="">Privacy Policy</a>
                         <a class="btn-link" href="">Terms & Condition</a>
                         <a class="btn-link" href="">Return Policy</a>
-                        <a class="btn-link" href="">FAQs & Help</a>
+                        <a class="btn-link" href="">FAQs & Help</a> *@
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                 <div class="col-lg-3 col-md-6">
                     <div class="d-flex flex-column text-start footer-item">
                         <h4 class="text-light mb-3">Account</h4>
                         <a class="btn-link" href="">My Account</a>
-                        <a class="btn-link" href="">Shop details</a>
+                     @*    <a class="btn-link" href="">Shop details</a>
                         <a class="btn-link" href="">Shopping Cart</a>
                         <a class="btn-link" href="">Wishlist</a>
                         <a class="btn-link" href="">Order History</a>
-                        <a class="btn-link" href="">International Orders</a>
+                        <a class="btn-link" href="">International Orders</a> *@
                     </div>
-                </div>
+                </div> 
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-item">
                         <h4 class="text-light mb-3">Contact</h4>
-                        <p>Address: 1429 Netus Rd, NY 48247</p>
-                        <p>Email: Example@gmail.com</p>
-                        <p>Phone: +0123 4567 8910</p>
+                        <p>123 Street Karachi.Pakistan</p>
+                        <p>Email: ycmart@gmail.com</p>
+                        <p>Phone: (+92) 4345657890</p>
                         <p>Payment Accepted</p>
                         <img src="~/img/payment.png" class="img-fluid" alt="">
                     </div>
