--- a/Admin_panel/Views/Web/Index.cshtml
+++ b/Admin_panel/Views/Web/Index.cshtml
@@ -118,11 +118,11 @@
             <div class="row g-5 align-items-center">
                 <div class="col-md-12 col-lg-7">
                  @*    <h4 class="mb-3 text-secondary">100% Organic Foods</h4>  *@
-                    <h1 class="mb-5 display-5 text-primary">Search According To Your Choice</h1>
-                    <div class="position-relative mx-auto">
+                    <h4 class="mb-5 display-5 text-primary">Welcome <br/> To Your Choice Mart</h4>
+                  @*   <div class="position-relative mx-auto">
                         <input class="form-control border-2 border-secondary w-75 py-3 px-4 rounded-pill" type="number" placeholder="Search">
                         <button type="submit" class="btn btn-primary border-2 border-secondary py-3 px-4 position-absolute rounded-pill text-white h-100" style="top: 0; right: 25%;">Submit Now</button>
-                    </div>
+                    </div> *@
                 </div>
                 <div class="col-md-12 col-lg-5">
                     <div id="carouselId" class="carousel slide position-relative" data-bs-ride="carousel">
@@ -559,7 +559,7 @@
     </div> *@
     <!-- Fruits Shop End-->
     <!-- Featurs Start -->
-    <div class="container-fluid service py-5">
+  @*   <div class="container-fluid service py-5">
         <div class="container py-5">
             <div class="row g-4 justify-content-center">
                 <div class="col-md-6 col-lg-4">
@@ -603,7 +603,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Featurs End -->
     <!-- Vesitable Shop Start-->
   @*   <div class="container-fluid vesitable py-5">
@@ -727,7 +727,7 @@
     </div> *@
     <!-- Vesitable Shop End -->
     <!-- Banner Section Start-->
-    <div class="container-fluid banner bg-secondary my-5">
+   @*  <div class="container-fluid banner bg-secondary my-5">
         <div class="container py-5">
             <div class="row g-4 align-items-center">
                 <div class="col-lg-6">
@@ -752,10 +752,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Banner Section End -->
     <!-- Bestsaler Product Start -->
-    <div class="container-fluid py-5">
+  @*   <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="text-center mx-auto mb-5" style="max-width: 700px;">
                 <h1 class="display-4">Bestseller Products</h1>
@@ -958,7 +958,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Bestsaler Product End -->
     <!-- Fact Start -->
     <div class="container-fluid py-5">
@@ -999,7 +999,7 @@
     </div>
     <!-- Fact Start -->
     <!-- Tastimonial Start -->
-    <div class="container-fluid testimonial py-5">
+@*     <div class="container-fluid testimonial py-5">
         <div class="container py-5">
             <div class="testimonial-header text-center">
                 <h4 class="text-primary">Our Testimonial</h4>
@@ -1086,7 +1086,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Tastimonial End -->
     <!-- Footer Start -->
    @*  <div class="container-fluid bg-dark text-white-50 footer pt-5 mt-5">
@@ -1163,7 +1163,7 @@
     </div> *@
     <!-- Footer End -->
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
+ @*    <div class="container-fluid copyright bg-dark py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -1177,7 +1177,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Copyright End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
