--- a/Admin_panel/Views/Web/Shop.cshtml
+++ b/Admin_panel/Views/Web/Shop.cshtml
@@ -87,23 +87,24 @@
     </div>
     </div>
     <a href="contact.html" class="nav-item nav-link">Contact</a>
-    </div>
-    <div class="d-flex m-3 me-0">
-    <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-    <a href="#" class="position-relative me-4 my-auto">
+    </div> *@
+  @*   <div class="d-flex m-3 me-0"> 
+    <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button> *@
+  @*    <a href="#" class="position-relative me-4 my-auto">
     <i class="fa fa-shopping-bag fa-2x"></i>
     <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-    </a>
-    <a href="#" class="my-auto">
+    </a> *@
+  @*   <a href="#" class="my-auto">
     <i class="fas fa-user fa-2x"></i>
-    </a>
-    </div>
-    </div>
+    </a> *@
+@*     </div> *@
+   @*  </div>
     </nav>
     </div>
-    </div> *@
+    </div>  *@
     <!-- Navbar End -->
     <!-- Modal Search Start -->
+
     <div class="modal fade" id="searchModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content rounded-0">
@@ -141,14 +142,16 @@
     <!-- Fruits Shop Start-->
     <div class="container-fluid fruite py-5">
         <div class="container py-5">
-            <h1 class="mb-4">Fresh fruits shop</h1>
+            @*  <h1 class="mb-4">Fresh fruits shop</h1> *@ 
             <div class="row g-4">
                 <div class="col-lg-12">
                     <div class="row g-4">
                         <div class="col-xl-3">
                             <div class="input-group w-100 mx-auto d-flex">
-                                <input type="search" class="form-control p-3" placeholder="keywords" aria-describedby="search-icon-1">
-                                <span id="search-icon-1" class="input-group-text p-3"><i class="fa fa-search"></i></span>
+                                <form method="get" asp-action="Shop" asp-controller="Web">
+                                <input type="search" class="form-control p-3" name="name" placeholder="keywords" aria-describedby="search-icon-1">
+                                <button type="submit" id="search-icon-1" class="input-group-text p-3 mt-2"><i class="fa fa-search"></i></button>
+                                </form>
                             </div>
                         </div>
                         <div class="col-6"></div>
