--- a/Admin_panel/Views/Web/PDetail.cshtml
+++ b/Admin_panel/Views/Web/PDetail.cshtml
@@ -537,7 +537,7 @@
                     </div>
                 </div> *@
             </div>
-            <h1 class="fw-bold mb-0">Related products</h1>
+        @*     <h1 class="fw-bold mb-0">Related products</h1>
             <div class="vesitable">
                 <div class="owl-carousel vegetable-carousel justify-content-center">
                     <div class="border border-primary rounded position-relative vesitable-item">
@@ -653,7 +653,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> *@
         </div>
     </div>
     <!-- Single Product End -->
@@ -730,7 +730,7 @@
     </div> *@
     <!-- Footer End -->
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
+   @*  <div class="container-fluid copyright bg-dark py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -744,7 +744,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Copyright End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
