--- a/Admin_panel/Views/PlaceOrder/Checkout.cshtml
+++ b/Admin_panel/Views/PlaceOrder/Checkout.cshtml
@@ -422,7 +422,7 @@
     </div> *@
     <!-- Footer End -->
     <!-- Copyright Start -->
-    <div class="container-fluid copyright bg-dark py-4">
+  @*   <div class="container-fluid copyright bg-dark py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
@@ -436,7 +436,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> *@
     <!-- Copyright End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
