--- a/Admin_panel/Views/Web/contact.cshtml
+++ b/Admin_panel/Views/Web/contact.cshtml
@@ -146,14 +146,14 @@
                     <div class="col-12">
                         <div class="text-center mx-auto" style="max-width: 700px;">
                             <h1 class="text-primary">Get in touch</h1>
-                            <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
-                        </div>
+                          @* @*   <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p> *@
+                        </div> 
                     </div>
-                    <div class="col-lg-12">
+                @*     <div class="col-lg-12">
                         <div class="h-100 rounded">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d924237.7107175417!2d66.49590410255709!3d25.192983523643726!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3eb33e06651d4bbf%3A0x9cf92f44555a0c23!2sKarachi%2C%20Karachi%20City%2C%20Sindh%2C%20Pakistan!5e0!3m2!1sen!2s!4v1714367600732!5m2!1sen!2s" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
-                    </div>
+                    </div> *@
                     @if(claims!=null){
                     <div class="col-lg-7">
                         <form asp-action="Contact2" asp-controller="Web" method="post">
