--- a/Admin_panel/Views/Home/OrderList.cshtml
+++ b/Admin_panel/Views/Home/OrderList.cshtml
@@ -89,8 +89,8 @@
           
             <td>
                 @* <a asp-action="Edit" asp-route-id="@item.Order_id">Edit</a> | *@
-                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Order_id">Details</a> |
-                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Order_id">Delete</a>
+                <a class="btn btn-primary" asp-action="ODetail" asp-controller="Home" asp-route-id="@item.Order_id">Details</a> |
+                    <a class="btn btn-danger" asp-action="Delete" asp-controller="Home" asp-route-id="@item.Order_id">Delete</a>
             </td>
         </tr>
 }
