--- a/Admin_panel/Views/Home/Index.cshtml
+++ b/Admin_panel/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Admin_panel.Models.Data.Product
+
 @{
     Layout = "_Layout";
 }
@@ -351,7 +352,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-uppercase mb-1">Sales</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">650</div>
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.sales</div>
                       <div class="mt-2 mb-0 text-muted text-xs">
                         <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
                      @*    <span>Since last years</span> *@
