--- a/Admin_panel/Views/Shared/_LoginPartial.cshtml
+++ b/Admin_panel/Views/Shared/_LoginPartial.cshtml
@@ -1,10 +1,15 @@
 ﻿
 
+@using Admin_panel.Models.Data;
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
-
+@inject Applicationdbcontext dbcontext
+@{
+    var msg = dbcontext.Contacts.ToList();
+    var mcount = dbcontext.Contacts.Count();
+}
 
 @if (SignInManager.IsSignedIn(User))
 {
@@ -84,27 +89,28 @@
                 <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-envelope fa-fw"></i>
-                    <span class="badge badge-warning badge-counter">2</span>
+                    <span class="badge badge-warning badge-counter">@mcount</span>
                 </a>
                 <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
                      aria-labelledby="messagesDropdown">
                     <h6 class="dropdown-header">
                         Message Center
                     </h6>
-                    <a class="dropdown-item d-flex align-items-center" href="#">
-                        <div class="dropdown-list-image mr-3">
+                    @foreach(var mlist in msg){
+                        <a class="dropdown-item d-flex align-items-center" href="#">
+                      @*   <div class="dropdown-list-image mr-3">
                             <img class="rounded-circle" src="~/img/man.png" style="max-width: 60px" alt="">
                             <div class="status-indicator bg-success"></div>
-                        </div>
+                        </div> *@
                         <div class="font-weight-bold">
                             <div class="text-truncate">
-                                Hi there! I am wondering if you can help me with a problem I've been
-                                having.
+                               @mlist.c_msg
                             </div>
-                            <div class="small text-gray-500">Udin Cilok · 58m</div>
+                            <div class="small text-gray-500">@mlist.c_name</div>
                         </div>
                     </a>
-                    <a class="dropdown-item d-flex align-items-center" href="#">
+                    }
+                  @*   <a class="dropdown-item d-flex align-items-center" href="#">
                         <div class="dropdown-list-image mr-3">
                             <img class="rounded-circle" src="~/img/girl.png" style="max-width: 60px" alt="">
                             <div class="status-indicator bg-default"></div>
@@ -116,11 +122,11 @@
                             </div>
                             <div class="small text-gray-500">Jaenab · 2w</div>
                         </div>
-                    </a>
-                    <a class="dropdown-item text-center small text-gray-500" href="#">Read More Messages</a>
-                </div>
+                </a> *@
+                    <a class="dropdown-item text-center small text-gray-500" asp-action="CustomerMessages" asp-controller="Home">Read More Messages</a>
+                </div> 
             </li>
-            <li class="nav-item dropdown no-arrow mx-1">
+          @*   <li class="nav-item dropdown no-arrow mx-1">
                 <a class="nav-link dropdown-toggle" href="#" id="messagesDropdown" role="button" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false">
                     <i class="fas fa-tasks fa-fw"></i>
@@ -168,8 +174,8 @@
                         </div>
                     </a>
                     <a class="dropdown-item text-center small text-gray-500" href="#">View All Taks</a>
-                </div>
-            </li>
+                </div> 
+            </li> *@
             <div class="topbar-divider d-none d-sm-block"></div>
             <li class="nav-item dropdown no-arrow">
                 <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown"
